Лекции/Stepik
Операции с целыми числами
In [1]:2 + 5
Out[1]:7
In [2]:10 - 5
Out[2]:5
In [3]:6 * 7
Out[3]:42
In [4]:12345678 * 987654328765432318765
Out[4]:12193262318244164938266047670
In [5]:3 + 5 * 4
Out[5]:23
In [6]:(3 + 5) * 4
Out[6]:32
In [7]:40 // 8
Out[7]:5
In [8]:42 // 8
Out[8]:5
In [9]:42 % 8
Out[9]:2
In [10]:239 % 10
Out[10]:9
In [11]:239 // 10
Out[11]:23
In [12]:2 ** 5
Out[12]:32
In [13]:- (42)
Out[13]:-42
In []:+ (42)
In [15]:+-+42
Out[15]:-42

---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
28.01.2022

Сообщения об ошибках¶
In [16]:
-*42
  File "<ipython-input-16-85d397208f73>", line 1
    -*42
     ^
SyntaxError: invalid syntax
In [17]:
print('test')
* 23
test

  File "<ipython-input-17-21eaeacd21f5>", line 2
    * 23
        ^
SyntaxError: can use starred expression only as assignment target
In [18]:
5 // 0
-----------------------------------
ZeroDivisionError                         Traceback (most recent call last)
<ipython-input-18-8798db347eeb> in <module>()
----> 1 5 // 0

ZeroDivisionError: integer division or modulo by zero

---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
30.01.2022
Числа с плавающей точкой
In [19]:0.5 + 0.3
Out[19]:0.8
In [20]:5 / 2
Out[20]:2.5
In [21]:5 // 2
Out[21]:2
In [22]:1 / 3
Out[22]:0.3333333333333333
In [23]:0.3 + 0.3 + 0.3
Out[23]:0.8999999999999999
In [24]:2 ** 5
Out[24]:32
In [25]:9 ** 0.5
Out[25]:3.0
In [26]:5e-1
Out[26]:0.5
In [27]:1234e2
Out[27]:123400.0

---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------


